# opengl_tutorials

./: .gitignore  README.md  build.bat
src/: CMakeLists.txt
src/ch1/: CMakeLists.txt
src/ch1/shader/: CMakeLists.txt  shader.cpp  shaders.h
src/ch1/shader/glsl/: frg.glsl  vtx.glsl
src/ch1/triangle/: CMakeLists.txt  triangle.cpp
src/ch1/window/: windows.cpp
